--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: go mod download
 
       - name: "Go: Test"
-        run: go test .
+        run: go test . -race
 
   golangci-lint:
     runs-on: ubuntu-latest
