--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
 name: spring83-keygen CI
 
+env:
+  GO_VERSION: 1.19
+
+
 on:
   pull_request:
   push:
@@ -11,10 +15,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 3
-
-    env:
-      GO_VERSION: 1.19
-
     steps:
       - name: Install Go
         uses: actions/setup-go@v3
@@ -35,6 +35,11 @@ jobs:
     timeout-minutes: 3
 
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
       - name: Checkout
         uses: actions/checkout@v3
 
